# gamos_qt_gui

./: .clang-format  .gitignore  CMakeLists.txt  Create_vector_string.html  Get_Isotopes.html  Makefile  README.md  UseGuide.pptx  _build.sh  _clean.sh  _install.sh  _remove_subdir.sh  build.sh  gamosgui.desktop  main_app.cpp  qstringList.html
_CPack_Packages/Linux/ZIP/gamos_gui-1.0.0-Linux/include/: BHStackWidget.h  BNumberInput.h  BPathInput.h  BPhantomTab.h  BVStackWidget.h
images/: lung10mm(source).wrl  lung20mm(geom).wrl  lung20mm(source).wrl
resources/config/expert_mode/phantom/: materials.json  math_phantom_shapes.json
resources/config/simple_mode/: geometries.json  kinetic_energies .json  practises.json
resources/images/: lung10mm(geom).wrl  lung15mm(geom).wrl  lung5mm(geom).wrl
resources/sample_data/: lung15mm(source).wrl  lung5mm(soure).wrl
scripts/: install.sh  update.sh
src/: BChooseModeWindow.cpp  BChooseModeWindow.h  BDemo1Window.cpp  BDemo1Window.h  BDemo2Window.cpp  BDemo2Window.h  BExpertWindow.cpp  BExpertWindow.h  BMainWindow.cpp  BMainWindow.h  BSimpleWindow.cpp  BSimpleWindow.h
src/model/: B10ItemModel.cpp  B10ItemModel.h  BJsonSimpleMode.h  BJsonValue.h  Isotope.cpp  Isotope.h  Types.cpp  Types.h
src/utils/: AppData.cpp  AppData.h  BFileGen.cpp  BFileGen.h  Helper.cpp  Helper.h  Terminal.h  VrmlViewer.cpp  VrmlViewer.h
src/virtual/: BWindow.h
src/widget/: AppData.cpp  AppData.h  BComboBox.cpp  BComboBox.h  BComboboxCompleter.cpp  BComboboxCompleter.h  BGroupNumberInput.cpp  BGroupNumberInput.h  BHStackWidget.cpp  BHStackWidget.h  BLineEditCompleter.cpp  BLineEditCompleter.h  BListCheckBox.cpp  BListCheckBox.h  BListCheckText.cpp  BListCheckText.h  BNumberInput.cpp  BNumberInput.h  BPathInput.cpp  BPathInput.h  BPhantomTab.cpp  BPhantomTab.h  BPos3Input.cpp  BPos3Input.h  BStackWidget.cpp  BStackWidget.h  BStyleLabel.cpp  BStyleLabel.h  BVStackWidget.cpp  BVStackWidget.h  Terminal.cpp  Terminal.h  TerminalDialog.cpp  TerminalDialog.h
